<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <wasakey.w3apps.com.qrcode.helpers.widget.BaseStatusBar
            android:id="@+id/status_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_title_bar_primary_color_and_accent_color"
            app:layout_constraintBottom_toTopOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="@dimen/toolbar_height"
            android:background="@drawable/gradient_title_bar_primary_color_and_accent_color"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:contentInsetStartWithNavigation="@dimen/margin_0"
            app:layout_constraintBottom_toTopOf="@+id/text_view_play_sound"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status_bar"
            app:title="@string/about_us"
            />

        <TextView
            android:id="@+id/text_view_about_us_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:gravity="center"
            android:text="@string/dolor_sit_amet"
            android:textSize="@dimen/text_body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/text_view_about_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:gravity="center"
            android:text="@string/app_version_v1_1"
            android:textSize="@dimen/text_headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_about_us_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>