<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeActivity"
        >

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/admob_test_banner_ad_unit_id"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/constraint_layout_generate_container" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinator_layout_icon_extra_part_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/background"
            app:layout_constraintBottom_toTopOf="@+id/view_drop_shadow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image_view_generate_active" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_generate_container"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_56"
            android:background="@color/white"
            ads:layout_constraintBottom_toTopOf="@+id/adView"
            app:layout_constraintEnd_toStartOf="@+id/constraint_layout_scan_container"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_drop_shadow" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_scan_container"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_56"
            android:background="@color/white"
            ads:layout_constraintBottom_toTopOf="@+id/adView"
            app:layout_constraintEnd_toStartOf="@+id/constraint_layout_history_container"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/constraint_layout_generate_container"
            app:layout_constraintTop_toBottomOf="@+id/view_drop_shadow" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_history_container"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_56"
            android:background="@color/white"
            ads:layout_constraintBottom_toTopOf="@+id/adView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/constraint_layout_scan_container"
            app:layout_constraintTop_toBottomOf="@+id/view_drop_shadow" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_generate"
            android:layout_width="@dimen/width_24"
            android:layout_height="@dimen/height_24"
            android:src="@drawable/ic_generate_inactive"
            app:layout_constraintBottom_toTopOf="@+id/text_view_generate"
            app:layout_constraintEnd_toEndOf="@+id/constraint_layout_generate_container"
            app:layout_constraintStart_toStartOf="@+id/constraint_layout_generate_container"
            app:layout_constraintTop_toTopOf="@+id/constraint_layout_generate_container"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/text_view_generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate"
            android:textSize="@dimen/text_smaller_body"
            app:layout_constraintBottom_toBottomOf="@+id/constraint_layout_generate_container"
            app:layout_constraintEnd_toEndOf="@+id/constraint_layout_generate_container"
            app:layout_constraintStart_toStartOf="@+id/constraint_layout_generate_container"
            app:layout_constraintTop_toBottomOf="@+id/image_view_generate" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_scan"
            android:layout_width="@dimen/width_24"
            android:layout_height="@dimen/height_24"
            android:src="@drawable/ic_scan_inactive"
            app:layout_constraintBottom_toTopOf="@+id/text_view_scan"
            app:layout_constraintEnd_toEndOf="@+id/constraint_layout_scan_container"
            app:layout_constraintStart_toStartOf="@+id/constraint_layout_scan_container"
            app:layout_constraintTop_toTopOf="@+id/constraint_layout_scan_container"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/text_view_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan"
            android:textSize="@dimen/text_smaller_body"
            app:layout_constraintBottom_toBottomOf="@+id/constraint_layout_scan_container"
            app:layout_constraintEnd_toEndOf="@+id/constraint_layout_scan_container"
            app:layout_constraintStart_toStartOf="@+id/constraint_layout_scan_container"
            app:layout_constraintTop_toBottomOf="@+id/image_view_scan" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_history"
            android:layout_width="@dimen/width_24"
            android:layout_height="@dimen/height_24"
            android:src="@drawable/ic_history_inactive"
            app:layout_constraintBottom_toTopOf="@+id/text_view_history"
            app:layout_constraintEnd_toEndOf="@+id/constraint_layout_history_container"
            app:layout_constraintStart_toStartOf="@+id/constraint_layout_history_container"
            app:layout_constraintTop_toTopOf="@+id/constraint_layout_history_container"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/text_view_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textSize="@dimen/text_smaller_body"
            app:layout_constraintBottom_toBottomOf="@+id/constraint_layout_history_container"
            app:layout_constraintEnd_toEndOf="@+id/constraint_layout_history_container"
            app:layout_constraintStart_toStartOf="@+id/constraint_layout_history_container"
            app:layout_constraintTop_toBottomOf="@+id/image_view_history" />

        <View
            android:id="@+id/view_drop_shadow"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_1"
            android:background="@color/shadow"
            app:layout_constraintBottom_toTopOf="@+id/constraint_layout_generate_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coordinator_layout_icon_extra_part_container" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_generate_active"
            android:layout_width="@dimen/width_60"
            android:layout_height="@dimen/height_60"
            android:layout_marginBottom="@dimen/margin_20"
            android:src="@drawable/ic_generate_active"
            app:layout_constraintBottom_toTopOf="@+id/text_view_generate"
            app:layout_constraintEnd_toEndOf="@+id/constraint_layout_generate_container"
            app:layout_constraintStart_toStartOf="@+id/constraint_layout_generate_container"
            app:layout_constraintTop_toTopOf="@+id/constraint_layout_generate_container"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_scan_active"
            android:layout_width="@dimen/width_60"
            android:layout_height="@dimen/height_60"
            android:layout_marginBottom="@dimen/margin_20"
            android:src="@drawable/ic_scan_active"
            app:layout_constraintBottom_toTopOf="@+id/text_view_scan"
            app:layout_constraintEnd_toEndOf="@+id/constraint_layout_scan_container"
            app:layout_constraintStart_toStartOf="@+id/constraint_layout_scan_container"
            app:layout_constraintTop_toTopOf="@+id/constraint_layout_scan_container"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_history_active"
            android:layout_width="@dimen/width_60"
            android:layout_height="@dimen/height_60"
            android:layout_marginBottom="@dimen/margin_20"
            android:src="@drawable/ic_history_active"
            app:layout_constraintBottom_toTopOf="@+id/text_view_history"
            app:layout_constraintEnd_toEndOf="@+id/constraint_layout_history_container"
            app:layout_constraintStart_toStartOf="@+id/constraint_layout_history_container"
            app:layout_constraintTop_toTopOf="@+id/constraint_layout_history_container"
            app:layout_constraintVertical_chainStyle="packed" />

        <wasakey.w3apps.com.qrcode.helpers.widget.BaseStatusBar
            android:id="@+id/status_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_title_bar_primary_color_and_accent_color"
            app:layout_constraintBottom_toTopOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="@dimen/toolbar_height"
            android:background="@drawable/gradient_title_bar_primary_color_and_accent_color"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:contentInsetStartWithNavigation="@dimen/margin_0"
            app:layout_constraintBottom_toTopOf="@+id/coordinator_layout_fragment_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status_bar" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinator_layout_fragment_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/coordinator_layout_icon_extra_part_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>